# sharkie

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  biome.json  deny.toml  docker-compose.override.yml  docker-compose.yml  download-backups.sh  readme.md  sharkie.env.example  sharkie.local.env.example  sharkie_db.env.example
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  create-docker-image-fe.yml  create-docker-image.yml  deploy.yml
.zed/: settings.json
docs/: 2024-01-01.json  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  today.json  tsconfig.json
docs/content/docs/: api.mdx  architecture.mdx  backend.mdx  deployment.mdx  development.mdx  frontend.mdx  index.mdx  meta.json  roadmap.mdx  security.mdx
docs/public/: openapi.json
docs/src/app/: layout.tsx
docs/src/app/api-reference/: page.tsx
docs/src/components/: api-reference.tsx  mdx.tsx
docs/src/lib/: layout.shared.tsx  source.ts
examples/: blacklist.json  readme.md  sorted-currencies.json
for-fe/: currency.ts
frontend/: .editorconfig  .env.example  .gitignore  .prettierrc.cjs  Dockerfile  biome.json  eslint.config.mjs  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: manifest.json  robots.txt
frontend/src/: react-simple-maps.d.ts  styled.d.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/src/components/: Calculator.tsx  CalculatorView.tsx  CatMascot.tsx  ChartTableView.tsx  Controls.tsx  CurrencyCards.tsx  CurrencyChart.tsx  CurrencyHistory.tsx  CurrencyLibrary.tsx  CurrencyMap.tsx  Footer.tsx  Header.tsx  PeriodComparison.tsx  RateAlert.tsx  RatesTable.tsx  Sidebar.tsx  TodaysPrice.tsx  TopBar.tsx  VolatilityHeatmap.tsx
frontend/src/hooks/: useClickOutside.ts  useRateStore.ts  useRates.ts  useSettings.ts
frontend/src/lib/: api.ts  currencies.ts  i18n.ts  registry.tsx  theme.ts
frontend/src/providers/: Providers.tsx
migrations/: 20240101000000_create_exchange_rates.sql  20260319000000_timescaledb_hypertable.sql
prometheus/: alerts.yml
scripts/: restore-latest-dump.sh
src/: config.rs  error.rs  main.rs  models.rs  state.rs  telemetry.rs
src/routes/: currencies.rs  health.rs  history.rs  mod.rs
src/services/: rates.rs
trash/: currencies.json  currency.ts
(+5 files in other folders)
